--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link data-trunk rel="rust" data-wasm-opt="z" />
     <link data-trunk rel="icon" type="image/ico" href="/assets/favicon.ico" />
+    <link data-trunk rel="copy-dir" href="/assets" />
     <link data-trunk rel="css" href="/style/output.css" />
 </head>
 
